force-app/main/default/objects/Lead/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GCA_Contact_Designation</valueSetName>
    </valueSet>
</CustomField>