force-app/main/default/objects/Lead/fields/Designation_Other__c.field-meta.xml
<CustomField>
    <fullName>Designation_Other__c</fullName>
    <label>Designation (Other)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>