force-app/main/default/objects/Lead/fields/Lead_Convert_Flag__c.field-meta.xml
<CustomField>
    <fullName>Lead_Convert_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lead Convert Flag</label>
    <type>Checkbox</type>
</CustomField>