force-app/main/default/objects/Lead/fields/Product_L4_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_L4_Category__c</fullName>
    <label>Product L4 Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GCA_Product_L4</valueSetName>
    </valueSet>
</CustomField>