force-app/main/default/objects/Lead/fields/Specialisation__c.field-meta.xml
<CustomField>
    <fullName>Specialisation__c</fullName>
    <label>Specialisation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GCA_Contact_Specialisation</valueSetName>
    </valueSet>
</CustomField>