force-app/main/default/objects/Lead/validationRules/address_field_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>address_field_is_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Street) || ISBLANK(City) || ISBLANK(State) || ISBLANK(PostalCode) || ISBLANK(Country)</errorConditionFormula>
    <errorMessage>Please fill all of the address details.</errorMessage>
</ValidationRule>