force-app/main/default/objects/Lead/validationRules/designation_other_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>designation_other_is_mandatory</fullName>
    <active>true</active>
    <description>designation other is mandatory if the designation is set to Others</description>
    <errorConditionFormula>ISPICKVAL( Designation__c, &apos;Others (Please specify)&apos; ) &amp;&amp; ISBLANK( Designation_Other__c )</errorConditionFormula>
    <errorDisplayField>Designation_Other__c</errorDisplayField>
    <errorMessage>Please specify the other designation if you select others on the designation.</errorMessage>
</ValidationRule>