force-app/main/default/objects/Lead/validationRules/first_name_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>first_name_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Please populate First Name.</errorMessage>
</ValidationRule>