force-app/main/default/objects/Lead/validationRules/phone_2_format_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>phone_2_format_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(MobilePhone)) &amp;&amp; NOT(REGEX(MobilePhone, &quot;^[0-9]+$&quot;))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Phone number can only contain digits, no spaces or special characters.</errorMessage>
</ValidationRule>