force-app/main/default/objects/Lead/validationRules/Salutation_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Salutation_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Salutation))</errorConditionFormula>
    <errorDisplayField>Salutation</errorDisplayField>
    <errorMessage>Salutation is Mandatory</errorMessage>
</ValidationRule>