force-app/main/default/objects/Lead/listViews/Australia_Lead_Manager_Lead.listView-meta.xml
<ListView>
    <fullName>Australia_Lead_Manager_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Australia Lead Manager</label>
    <queue>Australia_Lead_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>