force-app/main/default/objects/Lead/listViews/India_Lead_Manager_Lead.listView-meta.xml
<ListView>
    <fullName>India_Lead_Manager_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>India Lead Manager</label>
    <queue>India_Lead_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>