force-app/main/default/objects/Lead/listViews/Indonesia_Lead_Manager_Lead.listView-meta.xml
<ListView>
    <fullName>Indonesia_Lead_Manager_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Indonesia Lead Manager</label>
    <queue>Indonesia_Lead_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>