force-app/main/default/objects/Lead/listViews/Malaysia_Lead_Manager_Lead.listView-meta.xml
<ListView>
    <fullName>Malaysia_Lead_Manager_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Malaysia Lead Manager</label>
    <queue>Malaysia_Lead_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>