force-app/main/default/objects/Lead/listViews/New_Zealand_Lead_Manager_Lead.listView-meta.xml
<ListView>
    <fullName>New_Zealand_Lead_Manager_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>New Zealand Lead Manager</label>
    <queue>New_Zealand_Lead_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>