force-app/main/default/objects/Lead/listViews/Philippines_Lead_Manager_Lead.listView-meta.xml
<ListView>
    <fullName>Philippines_Lead_Manager_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Philippines Lead Manager</label>
    <queue>Philippines_Lead_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>