force-app/main/default/objects/Lead/listViews/Singapore_Lead_Manager_Lead.listView-meta.xml
<ListView>
    <fullName>Singapore_Lead_Manager_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Singapore Lead Manager</label>
    <queue>Singapore_Lead_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>