force-app/main/default/objects/Lead/listViews/Thailand_Lead_Manager_Lead.listView-meta.xml
<ListView>
    <fullName>Thailand_Lead_Manager_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Thailand Lead Manager</label>
    <queue>Thailand_Lead_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>