force-app/main/default/objects/Lead/listViews/Vietnam_Lead_Manager_Lead.listView-meta.xml
<ListView>
    <fullName>Vietnam_Lead_Manager_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Vietnam Lead Manager</label>
    <queue>Vietnam_Lead_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>